a few more tweaks to forum topics - line between profile and body, tweak signature css a bit

--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -51,7 +51,7 @@
 	</cardheader>
 	<cardbody>
 		<row>
-			<div class="col-lg-2 col-md-3 col-4">
+			<div class="forum-profile-section col-lg-2 col-md-3 col-4">
 				<div class="text-center">
 					<h6>
 						<profile-link username="@Model.PosterName">@Model.PosterName</profile-link>
