Forum/Topics - left align profile text

--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -57,7 +57,7 @@
 						<profile-link username="@Model.PosterName">@Model.PosterName</profile-link>
 					</h6>
 				</div>
-				<div class="card-text text-right" style="line-height: 1">
+				<div class="card-text text-left" style="line-height: 1">
 					<small>
 						@string.Join(", ", Model.PosterRoles)
 						<span condition="Model.PosterPlayerPoints >= 5">(@Math.Round(Model.PosterPlayerPoints))</span>
