--- a/TASVideos/Pages/Forum/Posts/User.cshtml
+++ b/TASVideos/Pages/Forum/Posts/User.cshtml
@@ -56,7 +56,9 @@
 		</cardbody>
 		<cardfooter>
 			<fullrow>
-				<small style="font-style: italic">@Html.Raw(Model.UserPosts.RenderedSignature)</small>
+				<small condition="!string.IsNullOrWhiteSpace(Model.UserPosts.Signature)" style="font-style: italic">
+					<forum-markup markup=@Model.UserPosts.Signature enable-html="false" enable-bb-code="true"></forum-markup>
+				</small>
 				<br />
 				<profile-link class="btn btn-info btn-sm" username="@Model.UserName">Profile</profile-link>
 				<div class="pull-right">
