--- a/TASVideos/Pages/Forum/Posts/User.cshtml
+++ b/TASVideos/Pages/Forum/Posts/User.cshtml
@@ -57,7 +57,7 @@
 		<cardfooter>
 			<fullrow>
 				<small condition="!string.IsNullOrWhiteSpace(Model.UserPosts.Signature)" style="font-style: italic">
-					<forum-markup markup=@Model.UserPosts.Signature enable-html="false" enable-bb-code="true"></forum-markup>
+					<forum-markup markup=@Model.UserPosts.Signature enable-bb-code="true"></forum-markup>
 				</small>
 				<br />
 				<profile-link class="btn btn-info btn-sm" username="@Model.UserName">Profile</profile-link>
