--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -87,8 +87,7 @@
 				<div condition="!string.IsNullOrWhiteSpace(Model.Signature)">
 					<div class="forum-signature mt-2">
 						<small>
-							<forum-markup markup=@Model.Signature enable-html=false enable-bb-code=true>
-							</forum-markup>
+							<forum-markup markup=@Model.Signature enable-html=false enable-bb-code=true></forum-markup>
 						</small>
 					</div>
 				</div>
