--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -82,8 +82,7 @@
 				</div>
 			</div>
 			<div class="col-lg-10 col-md-9 col-8">
-				<forum-markup markup=@Model.Text enable-html=@Model.EnableHtml enable-bb-code=@Model.EnableBbCode>
-				</forum-markup>
+				<forum-markup markup=@Model.Text enable-html=@Model.EnableHtml enable-bb-code=@Model.EnableBbCode></forum-markup>
 				<div condition="!string.IsNullOrWhiteSpace(Model.Signature)">
 					<div class="forum-signature mt-2">
 						<small>
