--- a/TASVideos/Pages/Forum/Topics/Split.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Split.cshtml
@@ -52,7 +52,7 @@
 										<img src="@post.PosterAvatar" />
 									</div>
 									<div class="col-8">
-										@Html.Raw(post.Text)
+										<forum-markup markup=@post.Text enable-html=@post.EnableHtml enable-bb-code=@post.EnableBbCode></forum-markup>
 									</div>
 								</row>
 							</cardbody>
