replace topic feed post rendereing with tag helper

--- a/TASVideos/Pages/Shared/Components/TopicFeed/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TopicFeed/Default.cshtml
@@ -15,10 +15,10 @@
 					</small>
 				</h6>
 				<div condition="Model.HideContent" class="collapse card-text" id="collapse-content-@post.Id">
-					@Html.Raw(post.RenderedText)
+					<forum-markup markup=@post.Text enable-bb-code=@post.EnableBbCode enable-html=@post.EnableHtml></forum-markup>
 				</div>
 				<div condition="!Model.HideContent" class="card-text">
-					@Html.Raw(post.RenderedText)
+					<forum-markup markup=@post.Text enable-bb-code=@post.EnableBbCode enable-html=@post.EnableHtml></forum-markup>
 				</div>
 			</div>
 		</div>
