--- a/TASVideos/Pages/Forum/Topics/PollResults.cshtml
+++ b/TASVideos/Pages/Forum/Topics/PollResults.cshtml
@@ -4,7 +4,9 @@
 	ViewData["Title"] = $"Poll Results for {Model.Poll.TopicTitle}";
 }
 <partial Name="_ForumHeader" />
-<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Poll.TopicId" class="btn btn-secondary"><span class="fa fa-arrow-left"></span> Back</a>
+<div>
+	<a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Poll.TopicId" class="btn btn-secondary"><span class="fa fa-arrow-left"></span> Back</a>
+</div>
 <hr />
 
 <div>
