link to ip list from user profile (for users with permissions to see private data)

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -69,6 +69,9 @@
 						{
 							<span class="fa fa-check-square text-success"></span><span> Not locked</span>
 						}
+						<div>
+							<a asp-page="/Users/Ips" asp-route-username="@Model.UserName" class="btn btn-warning">IP Addresses used</a>
+						</div>
 					</div>
 					<div class="pull-right mt-2">
 						@* ReSharper disable once UnusedVariable *@
