reduce overall padding in forum posts

--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -51,7 +51,7 @@
 			</div>
 		</row>
 	</cardheader>
-	<cardbody>
+	<cardbody class="p-2">
 		<row>
 			<div class="forum-profile-section col-lg-2 col-md-3 col-4">
 				<div class="text-center">
