--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TASVideos.Pages.Forum.Posts.Models.ForumPostEntry
-<card class="@(Model.Highlight ? "border-info" : "")">
+<card class="@(Model.Highlight ? "forum-post-highlight" : "")">
 	<cardheader class="pt-1 pb-1">
 		<row>
 			<div class="col-lg-2 col-md-3 col-4 p-0">
