--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -302,3 +302,9 @@ article.wiki table {
 .forum-profile-section {
 	border-right: solid 1px #eaeaea;
 }
+
+.forum-post-highlight {
+	border: solid 3px;
+	border-color: $info;
+	box-shadow: #c2d4fc 0px 8px 16px;
+}
