add Mood option when creating a topic

--- a/TASVideos/Pages/Forum/Topics/Create.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Create.cshtml
@@ -49,6 +49,9 @@
 			<label asp-for="Topic.Title" class="form-control-label"></label>
 			<input type="text" asp-for="Topic.Title" class="form-control" autocomplete="off" />
 			<span asp-validation-for="Topic.Title" class="text-danger"></span>
+			<label asp-for="Topic.Mood" class="form-control-label"></label>
+			<select asp-for="Topic.Mood" asp-items="@Model.Moods" class="form-control"></select>
+			<span asp-validation-for="Topic.Mood" class="text-danger"></span>
 		</column>
 		<column permission="SetTopicType" md="6">
 			<label asp-for="Topic.Type" class="form-control-label"></label>
