--- a/TASVideos/Pages/Shared/_Award.cshtml
+++ b/TASVideos/Pages/Shared/_Award.cshtml
@@ -1,4 +1,4 @@
 ﻿@model TASVideos.Services.AwardAssignmentSummary
 <a href="/Awards/@(Model.Year.ToString())#@(Model.ShortName)_@(Model.Year)" title="Award - @Model.Description">
-	<img style="max-height: 32px; max-width: 32px" src="/awards/@($"{Model.ShortName}_{Model.Year.ToString()}.png")" alt="@Model.Description" />
+	<img style="max-height: 32px; max-width: 32px" src="/awards/@($"{Model.ShortName}_{Model.Year.ToString()}.png")" alt="@Model.Description" loading="lazy" />
 </a>
