forum [frames] tag - display in the same formatting as publications and submissions

--- a/TASVideos/Pages/_ViewImports.cshtml
+++ b/TASVideos/Pages/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @namespace TASVideos.Pages
 @using Microsoft.AspNetCore.Identity
 @using TASVideos
+@using TASVideos.Common 
 @using TASVideos.Data
 @using TASVideos.Data.Entity
 @using TASVideos.Extensions
