--- a/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/BrokenLinks/Default.cshtml
@@ -1,5 +1,4 @@
-﻿@using TASVideos.Services
-@model IEnumerable<WikiPageReferral>
+﻿@model IEnumerable<WikiPageReferral>
 @inject ILanguages Languages
 
 @{
