--- a/TASVideos/Pages/Tags/Create.cshtml
+++ b/TASVideos/Pages/Tags/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model CreateModel
 @{
-	ViewData["Title"] = $"Editing Tag {Model.Tag.Code}";
+	ViewData["Title"] = $"Creating a new Tag";
 }
 
 <form method="post">
@@ -19,6 +19,7 @@
 	</row>
 	<div class="text-center mt-3">
 		<button type="submit" class="btn btn-primary">Save</button>
+		<a asp-page="/Tags/Index" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
 
