Flag maintenance screens, Publication edit - notfiy flag changes

--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -33,6 +33,7 @@
 		<a class="dropdown-item" asp-page="/Permissions/Index">Permissions</a>
 		<a permission="CatalogMovies" class="dropdown-item" asp-page="/Games/List">Games</a>
 		<a permission="TagMaintenance" class="dropdown-item" asp-page="/Tags/Index">Tag Maintenance</a>
+		<a permission="FlagMaintenance" class="dropdown-item" asp-page="/Flags/Index">Flag Maintenance</a>
 	</nav-dropdown>
 	<nav-dropdown activate="Wiki"
 				  permissions="new[] { PermissionTo.EditWikiPages, PermissionTo.EditSystemPages, PermissionTo.MoveWikiPages, PermissionTo.DeleteWikiPages }">
