--- a/TASVideos/Pages/Tags/Create.cshtml
+++ b/TASVideos/Pages/Tags/Create.cshtml
@@ -19,7 +19,7 @@
 	</row>
 	<div class="text-center mt-3">
 		<button type="submit" class="btn btn-primary">Save</button>
-		<a asp-page="/Tags/Index" class="btn btn-secondary">Cancel</a>
+		<a asp-page="Index" class="btn btn-secondary">Cancel</a>
 	</div>
 </form>
 
