--- a/TASVideos/Pages/Tags/Edit.cshtml
+++ b/TASVideos/Pages/Tags/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id}/{handler?}"
 @model EditModel
 @{
-	ViewData["Title"] = $"Editing Tag {Model.Tag.Code}";
+	ViewData["Title"] = $"Editing Tag: {Model.Tag.Code}";
 }
 
 <div class="text-right">
@@ -10,7 +10,7 @@
 				   warning-message="Are you sure you want to remove this tag?">
 		Delete
 	</delete-button>
-	<a class="btn btn-secondary" asp-page="/Publications/Index" asp-route-query="@Model.Tag.Code">
+	<a class="btn btn-secondary" condition="Model.InUse" asp-page="/Publications/Index" asp-route-query="@Model.Tag.Code">
 		Tag in Use
 	</a>
 </div>
