--- a/TASVideos/Pages/Publications/View.cshtml
+++ b/TASVideos/Pages/Publications/View.cshtml
@@ -10,7 +10,7 @@
 <partial name="_MovieModule" model="Model.Publication" />
 @await Component.RenderWiki("System/MovieLinkInstruction")
 <small>
-	last edited by @Model.Publication.LastUpdateUser on @Model.Publication.LastUpdateTimeStamp
+	last edited by @Model.Publication.LastUpdateUser on @Model.Publication.LastUpdateTimestamp
 </small>
 <br />
 <a
