--- a/TASVideos/Pages/Shared/Components/MediaPosts/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MediaPosts/Default.cshtml
@@ -19,7 +19,7 @@
 			<td>@post.Body</td>
 			<td><a href="@post.Link">@post.Link</a></td>
 			<td>@post.Type (@post.Group)</td>
-			<td>@post.CreateTimeStamp</td>
+			<td>@post.CreateTimestamp</td>
 		</tr>
 	}
 </table>
