--- a/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
@@ -11,7 +11,7 @@
 		@foreach (var orphan in Model)
 		{
 			<tr>
-				<td>@orphan.LastUpdateTimeStamp</td>
+				<td>@orphan.LastUpdateTimestamp</td>
 				<td><a href="/@orphan.PageName">@orphan.PageName</a></td>
 				<td>@orphan.LastUpdateUserName</td>
 			</tr>
