--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -114,7 +114,7 @@
 					}
 				</row>
 				<fullrow>
-					<div><small>@Model.CreateTimeStamp.Date.ToShortDateString()</small></div>
+					<div><small>@Model.CreateTimestamp.Date.ToShortDateString()</small></div>
 					@await Component.RenderWiki(LinkConstants.PublicationWikiPage + Model.Id)
 				</fullrow>
 				<fullrow>
