--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -145,7 +145,7 @@
 </card>
 <hr />
 <small>
-	last edited by @Model.Submission.LastUpdateUser on @Model.Submission.LastUpdateTimeStamp
+	last edited by @Model.Submission.LastUpdateUser on @Model.Submission.LastUpdateTimestamp
 </small>
 <br />
 <a
