--- a/TASVideos/Pages/Users/Edit.cshtml
+++ b/TASVideos/Pages/Users/Edit.cshtml
@@ -25,8 +25,8 @@
 	<row>
 		<div class="col-md-5">
 			<form-group>
-				<label asp-for="UserToEdit.CreateTimeStamp" class="form-control-label"></label>
-				<div><timezone-convert asp-for="@Model.UserToEdit.CreateTimeStamp"/></div>
+				<label asp-for="UserToEdit.CreateTimestamp" class="form-control-label"></label>
+				<div><timezone-convert asp-for="@Model.UserToEdit.CreateTimestamp"/></div>
 			</form-group>
 			<form-group>
 				<label asp-for="UserToEdit.UserName" class="form-control-label"></label>
