--- a/TASVideos/Pages/Forum/Topics/Split.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Split.cshtml
@@ -28,7 +28,7 @@
 		<label asp-for="Topic.PostToSplitId" class="form-control-label"></label>
 		<span asp-validation-for="Topic.PostToSplitId" class="text-danger"></span>
 		<small>
-			@foreach (var post in Model.Topic.Posts.OrderBy(p => p.PostCreateTimeStamp))
+			@foreach (var post in Model.Topic.Posts.OrderBy(p => p.PostCreateTimestamp))
 			{
 				<row>
 					<div class="col-md-1">
