--- a/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/TabularMovieList/Default.cshtml
@@ -22,7 +22,7 @@
 				@foreach (var pub in Model)
 				{
 					<tr>
-						<td><timezone-convert asp-for="@pub.CreateTimeStamp" date-only="true"/></td>
+						<td><timezone-convert asp-for="@pub.CreateTimestamp" date-only="true"/></td>
 						<td>@pub.Game</td>
 						<td>
 							<pub-link id="pub.Id">@($"{pub.Time():g}")</pub-link>
