--- a/TASVideos/Pages/Shared/_WikiLayoutFooter.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayoutFooter.cshtml
@@ -22,7 +22,7 @@ else
 
 <hr />
 <small>
-	@Model.PageName last edited by @Model.LastUpdateUserName on <timezone-convert asp-for="@Model.LastUpdateTimeStamp" />
+	@Model.PageName last edited by @Model.LastUpdateUserName on <timezone-convert asp-for="@Model.LastUpdateTimestamp" />
 </small>
 <br />
 
