--- a/TASVideos/Pages/Users/List.cshtml
+++ b/TASVideos/Pages/Users/List.cshtml
@@ -18,7 +18,7 @@
 			<td>@user.Id</td>
 			<td>@user.UserName</td>
 			<td>@string.Join(",", user.Roles)</td>
-			<td><timezone-convert asp-for="@user.CreateTimeStamp" /></td>
+			<td><timezone-convert asp-for="@user.CreateTimestamp" /></td>
 			<td>
 				<profile-link
 					username="@user.UserName"
