--- a/TASVideos/Pages/Wiki/ViewSource.cshtml
+++ b/TASVideos/Pages/Wiki/ViewSource.cshtml
@@ -6,7 +6,7 @@
 <div>
 	<small>
 		Revision @Model.Revision (current)<br />
-		Last Updated by @(Model.WikiPage.CreateUserName ?? "Unknown") on <timezone-convert asp-for="@Model.WikiPage.CreateTimeStamp" /> 
+		Last Updated by @(Model.WikiPage.CreateUserName ?? "Unknown") on <timezone-convert asp-for="@Model.WikiPage.CreateTimestamp" /> 
 	</small>
 </div>
 <div>
