--- a/TASVideos/Pages/Forum/Posts/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Edit.cshtml
@@ -44,7 +44,7 @@
 		</column>
 	</row>
 	<fullrow class="mt-3">
-		<partial name="_CreatePostHelper" model="nameof(Model.Post.Text)" />
+		<partial name="_CreatePostHelper" model="@("Post_Text")" />
 	</fullrow>
 	<form-group>
 		<textarea asp-for="Post.Text" class="form-control" rows="20"></textarea>
