Implement a search page that is an integrated serach between forums, wiki, and games

--- a/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
@@ -12,7 +12,9 @@
 		{
 			<tr>
 				<td>@orphan.LastUpdateTimestamp</td>
-				<td><a href="/@orphan.PageName">@orphan.PageName</a></td>
+				<td>
+					<wiki-link page-name="@orphan.PageName"></wiki-link>
+				</td>
 				<td>@orphan.LastUpdateUserName</td>
 			</tr>
 		}
