move more services to the Core proejct

--- a/TASVideos/Pages/Games/_HistoryEntry.cshtml
+++ b/TASVideos/Pages/Games/_HistoryEntry.cshtml
@@ -1,4 +1,4 @@
-﻿@model TASVideos.Services.PublicationHistoryNode
+﻿@model TASVideos.Core.Services.PublicationHistoryNode
 @{
 	var highlight = Model.Id == (int?)ViewData["Highlight"] ? ViewData["HighlightClass"] : "";
 }
