--- a/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/WikiOrphans/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TASVideos.Services.WikiOrphan>
+﻿@model IEnumerable<TASVideos.Core.Services.WikiOrphan>
 
 <label class="float-right">Total: @Model.Count()</label>
 <table class="table table-striped">
