--- a/TASVideos/Pages/_ViewImports.cshtml
+++ b/TASVideos/Pages/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using TASVideos.Data
 @using TASVideos.Data.Entity
 @using TASVideos.Extensions
+@using TASVideos.Core.Services
 @using TASVideos.Services
 @using TASVideos.ViewComponents
 @addTagHelper TASVideos.TagHelpers.*, TASVideos
