move FeedLog service classes to core

--- a/TASVideos/Pages/Shared/Components/FeedLog/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/FeedLog/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization
-@model IEnumerable<TASVideos.Services.RssFeedParsers.CommitEntry>
+@model IEnumerable<TASVideos.Core.Services.RssFeedParsers.CommitEntry>
 
 <table class="table table-striped table-bordered table-sm">
 	<tr>
