Move UserManager to Core project

--- a/TASVideos/Pages/Shared/_Profile.cshtml
+++ b/TASVideos/Pages/Shared/_Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserProfileModel
+﻿@model UserProfile
 @{ var lastLoggedIn = Model.LastLoggedInTimeStamp ?? DateTime.UtcNow; }
 <row>
 	<div class="col-md-6">
