create a SignInManager class that inherits the built in SignInManager<TUser> class and add common sign in code, the API now supports signing in with a legacy password

--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @inject UserManager UserManager
-@inject SignInManager<User> SignInManager
+@inject SignInManager SignInManager
 @{ 
 	bool isSignedIn = SignInManager.IsSignedIn(User);
 	int notificationCount = 0;
