--- a/TASVideos/Pages/Roles/AddEdit.cshtml
+++ b/TASVideos/Pages/Roles/AddEdit.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = Model.Id.HasValue ? "Modifying Role: " + Model.Role.Name : "Create a New Role";
 }
 <delete-button
-	condition="@Model.Id.HasValue && ViewData.UserHas(PermissionTo.DeleteRoles)"
+	condition="@(Model.Id.HasValue && ViewData.UserHas(PermissionTo.DeleteRoles) && (bool)ViewData["IsInUse"])"
 	asp-href="@($"/Roles/AddEdit/{Model.Id}/Delete")"
 	warning-message="Are you sure you want to delete this Role? This action cannot be undone!"
 	class="float-right text-center">
