there's an easier way in razor pages to get a user's permissions, not sure why a tedious viewdata thing was being used

--- a/TASVideos/Pages/Index.cshtml
+++ b/TASVideos/Pages/Index.cshtml
@@ -2,7 +2,7 @@
 @section PageTitle {
 }
 @{
-	bool canEdit = WikiHelper.UserCanEditWikiPage("System/FrontPage", User.Name(), (IEnumerable<PermissionTo>)ViewData["UserPermissions"]);
+	bool canEdit = WikiHelper.UserCanEditWikiPage("System/FrontPage", User.Name(), User.Permissions());
 }
 
 <cache enabled="@(!User.IsLoggedIn())" expires-after="@TimeSpan.FromSeconds(Durations.FiveMinutesInSeconds)">
