--- a/TASVideos/Pages/Shared/_WikiLayoutHeader.cshtml
+++ b/TASVideos/Pages/Shared/_WikiLayoutHeader.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WikiPage
 @{
-	bool canEdit = WikiHelper.UserCanEditWikiPage(Model.PageName, User.Name(), (IEnumerable<PermissionTo>)ViewData["UserPermissions"]);
+	bool canEdit = WikiHelper.UserCanEditWikiPage(Model.PageName, User.Name(), User.Permissions());
 }
 
 <!-- Eventually we will show available translations here-->
